# lls

./: .gitignore  CMakeLists.txt  README.md  lls.kdev4
scripts/: test.js  test1.js  test2.js
src/: CMakeLists.txt  globals.cpp  globals.h  jskeyboard.cpp  jskeyboard.h  keyboard.cpp  keyboard.h  main.cpp  utils.cpp  utils.h
